# Simple_to_PDF

./: .gitignore  LICENSE  Readme.md  Simple_to_PDF.geany  Simple_to_PDF.spec  THIRD-PARTY-NOTICES.txt  pyproject.toml  requirements.txt  settings.json
.github/workflows/: release.yml
lang/: de.json  en.json  es.json  pl.json  uk.json
src/cli/: __main__.py
src/converter/: __init__.py  exporter.py  merger.py  pages_remover.py
src/gui/: app.py
src/simple_to_pdf/: LICENSE
src/simple_to_pdf.egg-info/: PKG-INFO  SOURCES.txt
src/simple_to_pdf/app_dialog/: __init__.py  about_dialog.py  base_dialog.py  confirmation_dialog.py  extraction_dialog.py  info_dialog.py  update_dialog.py
src/simple_to_pdf/app_gui/: about_dialog.py  action_controls_frame.py  app.py  base_window.py  gui_builder.py  gui_callback.py  help_frame.py  info_dialog.py  list_controls_frame.py  main_frame.py  main_window.py  settings_frame.py  update_dialog.py  utils.py
src/simple_to_pdf/base_services/: base.py
src/simple_to_pdf/cli/: __main__.py  logger.py  version.json
src/simple_to_pdf/converter/: __init__.py  converter.py
src/simple_to_pdf/converters/: __init__.py  base_converter.py  converter_factory.py  factory.py  img_converter.py  lib_mixin.py  lib_office_converter.py  libre_excel_formater.py  models.py  ms_excel_formater.py  ms_mixin.py  ms_office_converter.py
src/simple_to_pdf/core/: config.py  models.py  version.json  version.py
src/simple_to_pdf/gui/: app.py  gui_builder.py  gui_callback.py  list_manager.py
src/simple_to_pdf/lang/: de.json  en.json  es.json  pl.json  uk.json
src/simple_to_pdf/localization/: localization_manager.py  localization_mixin.py
src/simple_to_pdf/pdf/: __init__.py  conversion_service.py  merger.py  models.py  page_extractor.py  pdf_compressor.py  pdf_merger.py  spliter.py
src/simple_to_pdf/settings/: settings_manager.py
src/simple_to_pdf/utils/: file_tools.py  logic.py  network.py  notification_manager.py  theme_provider.py  ui_tools.py
src/simple_to_pdf/widgets/: __init__.py  base_buttons.py  base_frames.py  base_lebels.py  base_textboxes.py  base_widgets.py  listbox.py  sliding_frame.py  toogle_frame.py  widgets.py
