[build-system]
# Tools required to build the project
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
# Core project metadata (PEP 621)
name = "simple-to-pdf"
version = "1.0.2"
description = "Simple_to_PDF is a lightweight, local multi-format converter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "hollowchest13", email = "hollowchest13@gmail.com" }]

# Project dependencies to be installed via pip
dependencies = [
    "openpyxl>=3.1.5",
    "pypdf>=5.0.0",
    "requests>=2.32.0",
    "packaging>=24.0",
    "pillow>=10.0.0",
    "tendo==0.3.0",
    "customtkinter>=5.2.2",
    "pywin32>=306; sys_platform == 'win32'",
    "pymupdf>=1.24.0",
]
[project.urls]
# External links for the project
Homepage = "https://github.com/hollowchest13/Simple_to_PDF"

[tool.setuptools]
# Map the root package to the 'src' directory
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
# Automatically discover packages in the 'src' folder
where = ["src"]

[project.scripts]
# Console script entry point: command = module.submodule:function
simple-pdf = "simple_to_pdf.main:main"

[tool.app_metadata]
# Custom section for application UI (About dialog, versioning, etc.)
release_date = "2026-06-20"
release_notes = """
   - Added: Cancelation button.
   - Fixed: An issue with processing large files with vector graphix.
   - Fixed an issue where the page extraction dialog would crash or block the interface upon closing.
"""
